fixing initial setup

--- a/authors.html
+++ b/authors.html
@@ -109,14 +109,14 @@
     <p>Dimitriadis T, Gneiting T, Jordan AI (2020).
 &ldquo;Evaluating probabilistic classifiers: Reliability
 diagrams and score decompositions revisited.&rdquo;
-available nowhere. 
+arXiv:2008.03033. 
 </p>
     <pre>@Unpublished{,
   title = {Evaluating probabilistic classifiers: Reliability
 diagrams and score decompositions revisited},
   author = {Timo Dimitriadis and Tilmann Gneiting and Alexander I. Jordan},
   year = {2020},
-  note = {available nowhere},
+  note = {arXiv:2008.03033},
 }</pre>
 
     <div class="page-header">
